--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 13 09:00:19 PDT 2016
-sdk.dir=C\:\\Users\\Nima\\AppData\\Local\\Android\\sdk1
+#Sun Dec 04 13:57:17 PST 2016
+sdk.dir=/Users/m_antik/Library/Android/sdk
