--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "edu.uiuc.sawbo"
+        applicationId "edu.msu.sawbo"
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 3
