Revert "Updated the new 2.03 apk with new package name edu.msu.sawbo"
This reverts commit 0b62feeeac4de22aee2516432c12dc24f39f2495.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "edu.msu.sawbo"
+        applicationId "edu.uiuc.sawbo"
         minSdkVersion 15
         targetSdkVersion 19
         versionCode 3
