app-release-SAWBO-1.1.apk released
Hi Ben

Here is the official release of the SAWBO 1.1 as requested.

https://www.dropbox.com/s/pzt062wdwtiyieo/app-release-SAWBO-1.1.apk?dl=0

applicationId "edu.mcu.sawbo"
versionName "1.1.0"

I have also created a new key. The key itself will be stored in GitHub.
The password for the key is : MakingADifference

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "edu.uiuc.sawbo"
+        applicationId "edu.mcu.sawbo"
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 3
-        versionName "2.0.5"
+        versionCode 1
+        versionName "1.1.0"
     }
     buildTypes {
         release {
